# makemore-jax

./: bigrams.py  mlp.py  pyproject.toml
