[project]
name = "makemore-jax"
version = "0.1.0"
description = "Learning Jax by following Andrej Karpathy `makemore` series"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flax>=0.12.0",
    "jax>=0.7.2",
    "optax>=0.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.0",
]
